<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>catch2_vendor</name>
  <version>2.13.9</version>
  <description>A modern, C++-native, test framework for unit-tests, TDD and BDD</description>
  <maintainer email="russ@rw.id.au">Russ Webber</maintainer>
  <license>BSL</license>

  <url type="website">https://github.com/catchorg/Catch2</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
